--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/login.css">
     <title>Document</title>
 </head>
 
 <body>
-    <h1>Hello World</h1>
+    
+    <div class="d-flex justify-content-center align-items-center min-vh-100">
+
+        <div class="login-container">
+            <h1 class="title">Todo App</h1>
+
+            <div class="login-form-container">
+                <form action="#">
+                    <div class="form-row">
+                        <div class="col-4">
+                            <label for="username-input">Username: </label>
+                        </div>
+                        <div class="col-8">
+                            <div class="input-with-icon">
+                                <i class="fas fa-user"></i>
+                                <input type="text" id="username-input" class="form-control">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="col-4">
+                            <label for="password-input">Password: </label>
+                        </div>
+                        <div class="col-8">
+                            <div class="input-with-icon">
+                                <i class="fas fa-lock"></i>
+                                <input type="password" id="password-input" class="form-control">
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="d-flex flex-column mt-3">
+                        <button type="submit" class="btn btn-success">login</button>
+                        <a href="#" class="mt-2 signup">Sign Up</a>
+                    </div>
+                </form>
+            </div>
+        </div>
+
+    </div class="d-flex">
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/bc31e4fa48.js" crossorigin="anonymous"></script>
+    <script src="scripts/login.js"></script>
 </body>
 
 </html>
