added all frontend UI and noDB functionalities

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/login.css">
-    <title>Document</title>
+    <title>Welcome | Todo App</title>
 </head>
 
 <body>
@@ -45,6 +45,7 @@
                     <div class="d-flex flex-column mt-3">
                         <button type="submit" class="btn btn-success">login</button>
                         <a href="#" class="mt-2 signup">Sign Up</a>
+                        <img class="img-fluid loader" src="assets/loader.gif">
                     </div>
                 </form>
             </div>
