--- a/public/todos.html
+++ b/public/todos.html
@@ -1,57 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/todos.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/todos.css" />
     <title>My Todos | Todo App</title>
-</head>
-<body>
-
+  </head>
+  <body>
     <div class="d-flex flex-column justify-content-center pt-5">
-        <h1 class="title">todo app</h1>
+      <h1 class="title">todo app</h1>
 
-        <div class="row justify-content-center no-gutters">
-            <div class="col-11 col-md-6">
-                <form class="add-todo-form" action="#">
-                    <div class="form-row justify-content-center">
-                        <div class="col-3">
-                            <p>New Todo:</p>
-                        </div>
-                        <div class="col-7">
-                            <input type="text" id="title-input" class="form-control" placeholder="Title">
-                            <textarea class="form-control" id="description-textarea" placeholder="Description (optional)" rows="3"></textarea>
-                        </div>
-                        <div class="col-2">
-                            <span class="fa-stack fa-2x" id="add-btn">
-                                <i class="fas fa-square fa-stack-2x"></i>
-                                <i class="fas fa-plus fa-stack-1x"></i>
-                            </span>
-                        </div>
-                    </div>
-                </form>
+      <div class="row justify-content-center no-gutters">
+        <div class="col-11 col-md-6">
+          <form class="add-todo-form" action="#">
+            <div class="form-row justify-content-center">
+              <div class="col-3">
+                <p>New Todo:</p>
+              </div>
+              <div class="col-7">
+                <input
+                  type="text"
+                  id="title-input"
+                  class="form-control"
+                  placeholder="Title"
+                />
+                <textarea
+                  class="form-control"
+                  id="description-textarea"
+                  placeholder="Description (optional)"
+                  rows="3"
+                ></textarea>
+              </div>
+              <div class="col-2">
+                <span class="fa-stack fa-2x" id="add-btn">
+                  <i class="fas fa-square fa-stack-2x"></i>
+                  <i class="fas fa-plus fa-stack-1x"></i>
+                </span>
+              </div>
             </div>
-        </div> <!-- end of row container for new todo form-->
+          </form>
+        </div>
+      </div>
+      <!-- end of row container for new todo form-->
 
-        <div class="row no-gutters justify-content-center mt-5">
-            <div class="col-11 col-md-9 no-gutters">
-                <div class="todo-list accordion">
-                    
-                </div> <!-- end of todo list -->
-            </div>
-        </div> <!-- end of todo list row container -->
+      <div class="row no-gutters justify-content-center mt-5">
+        <div class="col-11 col-md-9 no-gutters">
+          <div class="todo-list accordion"></div>
+          <!-- end of todo list -->
+        </div>
+      </div>
+      <!-- end of todo list row container -->
 
-        <button type="button" class="btn btn-danger logout-btn">LOGOUT</button>
-
+      <button type="button" class="btn btn-danger logout-btn">LOGOUT</button>
     </div>
-    
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/bc31e4fa48.js" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/bc31e4fa48.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="scripts/todos.js"></script>
-</body>
+  </body>
 </html>
