integrated todo CRUD front-to-back (auth jwt verified)

--- a/public/todos.html
+++ b/public/todos.html
@@ -18,6 +18,7 @@
       <h1 class="title">todo app</h1>
 
       <div class="row justify-content-center no-gutters">
+        
         <div class="col-11 col-md-6">
           <form class="add-todo-form" action="#">
             <div class="form-row justify-content-center">
@@ -46,11 +47,13 @@
               </div>
             </div>
           </form>
+          <div class="alert alert-success success-feedback mb-0 mt-3 collapse"></div>
+          <div class="alert alert-danger error-feedback mb-0 mt-3 collapse"></div>
         </div>
       </div>
       <!-- end of row container for new todo form-->
 
-      <div class="row no-gutters justify-content-center mt-5">
+      <div class="row no-gutters justify-content-center mt-3">
         <div class="col-11 col-md-9 no-gutters">
           <div class="todo-list accordion"></div>
           <!-- end of todo list -->
